# algobase-challenge-uploader

./: README.md  pyproject.toml  requirements.txt
challenge_uploader/: main.py
docs/: overview.md
examples/: challenge1.py
tests/: test_submit.py
